<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/nav_orders" />

    <item
        android:id="@+id/productionFragment"
        android:icon="@drawable/ic_production"
        android:title="@string/nav_production" />

    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_inventory" />
    
</menu>