...
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Nom de la matière première"
            app:startIconDrawable="@drawable/ic_inventory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNomMatiere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Fournisseur principal"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFournisseur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

...
